--- a/resume.css
+++ b/resume.css
@@ -3,7 +3,7 @@
 
 /*NAV BAR*/
 nav ul {
-	background-color: black;
+	background-color: blue;
 	overflow: hidden;
 	padding: 30px;
 
@@ -11,22 +11,22 @@ nav ul {
 
 nav li {
 	display: inline;
-	font-weight: normal;
 	font-size: 20px;
 	text-transform: uppercase;
-	font-family: sans-serif;
+	font-family: 'Roboto', sans-serif;
 	margin-right: 40px;
 }
 
 nav li a {
 	text-decoration: none;
-	color: blue;
+	color: black;
+	font-weight: bold;
 	text-align: center;
 	padding: 14px 16px;
 }
 
 nav li a:hover {
-	text-decoration: underline;
+	text-decoration: none;
 	color: black;
 	background-color: lightgray;
 }
@@ -109,6 +109,83 @@ form label{
 
 /*ON AIR PAGE */ 
 
+/*BUTTON ANIMATION*/
+button.shake-top {
+	-webkit-animation: shake-top 2s linear infinite both;
+	        animation: shake-top 2s linear infinite both;
+}
+
+@-webkit-keyframes shake-top {
+  0%,
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transform-origin: 50% 0;
+            transform-origin: 50% 0;
+  }
+  10% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  30%,
+  50%,
+  70% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+  80% {
+    -webkit-transform: rotate(-2deg);
+            transform: rotate(-2deg);
+  }
+  90% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+}
+@keyframes shake-top {
+  0%,
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transform-origin: 50% 0;
+            transform-origin: 50% 0;
+  }
+  10% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  30%,
+  50%,
+  70% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+  80% {
+    -webkit-transform: rotate(-2deg);
+            transform: rotate(-2deg);
+  }
+  90% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+}
+
+
+
+/*END BUTTON ANIMATIONS*/
+
 .yellowbutton {
 	border: 2px solid yellow;
 	background-color: black;
@@ -143,21 +220,80 @@ form label{
 		h1 {
 			color: blue;
 			line-height: .2;
+			font-family: 'Roboto', sans-serif;
+			text-shadow: 1px 3px 2px grey;
+			font-size: 40px;
+			text-transform: uppercase;
+			margin-top: 75px;
 		}
+		/*H1 ANIMATION*/
+		h1.tracking-in-contract-bck{
+			-webkit-animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+		}
+		@-webkit-keyframes tracking-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px);
+            transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px);
+            transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
+
+		/*H1 ANIMATION*/
+
 		h2 {
 			color: blue;
 			font-size: 30px;
 			line-height: .7;
+			font-family: 'Roboto', sans-serif;
 		}
+
 		h3 {
 			line-height: .7;
+			font-family: 'Roboto', sans-serif;
 		}
-
+	/*
 		.firstpageheader{
 			margin-top: 75px;
+			font-size: 40px;
 		}
+	*/
 
 /*HEADERS*/
+
+/*PARAGRAPHS*/
+	
+	p, li, td, th {
+		font-family: 'Source Sans Pro', sans-serif;	
+	}
+
+/*PARAGRAPHS*/
 
 
 /* RESUME PAGE*/	
@@ -186,6 +322,9 @@ form label{
 		#coreheader{
 			color: blue;
 		}
+
+
+
 /* RESUME PAGE*/
 
 
